--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.7.0",
     "simple-datatables": "^10.2.0"
